created html for mad lib story

--- a/index.html
+++ b/index.html
@@ -13,59 +13,42 @@
 </head>
 
 <body>
-    <header>
-        <div class="gutter-right logo">
-            <img src="assets/big-logo.png" />
-        </div>
-    </header>
-    <main>
-        <section class="main-section">
-            <img class="main-logo" src="./assets/alchemy-logo.png" />
-            <h2>
-                Welcome to Alchemy Bootstrap!
-            </h2>
+   <main>
+       <p id="story">
+        Once upon a <span id="noun-1">_</span> there were three little pigs. One pig
+        built a house of <span id="noun-2">_</span> while the second pig built his
+        house with <span id="noun-3">_</span>. They built their houses very <span id="adverb-1">_</span>
+        and then sang and <span id="verb-1">_</span> all day because they were
+        <span id="adjective-1">_</span>. The third little pig worked hard all day and built
+        his house with bricks. A big bad wolf saw the two <span id="adjective-2">_</span> pigs while they danced
+        and <span id="verb-2">_</span> and thought, “What juicy tender meals they
+        will make!” He chased the two pigs and they ran and
+        hid in their houses.
+       </p>
 
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam repellendus similique consectetur
-                voluptas facilis molestiae voluptates nobis error sapiente, ad, ipsa vero non, sint eligendi? Eos
-                praesentium iusto magnam exercitationem.
-                Earum sunt voluptatibus molestias, sint voluptatum quos reiciendis. Id asperiores deleniti dolores
-                provident, eius, nostrum aperiam vel, optio qui illo corrupti in. Eum quam, est nemo porro sapiente
-                excepturi assumenda.
-                Rerum unde quidem maxime. Ullam, dolores labore molestias voluptatibus adipisci quod? Quaerat nihil
-                inventore molestiae assumenda, voluptates vel necessitatibus eligendi? Accusamus ratione eligendi
-                reprehenderit? Beatae incidunt molestias ea soluta nulla.
-                Fugiat quae soluta voluptate mollitia praesentium modi ex illo, autem assumenda, vel aliquam fugit
-                possimus dolorem esse corporis ipsa! Voluptatem sapiente error non, ea optio suscipit quasi maxime nobis
-                ex?
-                Et ipsa tenetur ullam ab nesciunt quas fugit velit impedit illum esse eligendi corporis culpa
-                praesentium aspernatur ex sint veniam quidem, doloribus corrupti hic vitae. Eum neque ducimus omnis
-                exercitationem?
-            </p>
-            <hr />
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam repellendus similique consectetur
-                voluptas facilis molestiae voluptates nobis error sapiente, ad, ipsa vero non, sint eligendi? Eos
-                praesentium iusto magnam exercitationem.
-                Earum sunt voluptatibus molestias, sint voluptatum quos reiciendis. Id asperiores deleniti dolores
-                provident, eius, nostrum aperiam vel, optio qui illo corrupti in. Eum quam, est nemo porro sapiente
-                excepturi assumenda.
-                Rerum unde quidem maxime. Ullam, dolores labore molestias voluptatibus adipisci quod? Quaerat nihil
-                inventore molestiae assumenda, voluptates vel necessitatibus eligendi? Accusamus ratione eligendi
-                reprehenderit? Beatae incidunt molestias ea soluta nulla.
-                Fugiat quae soluta voluptate mollitia praesentium modi ex illo, autem assumenda, vel aliquam fugit
-                possimus dolorem esse corporis ipsa! Voluptatem sapiente error non, ea optio suscipit quasi maxime nobis
-                ex?
-                Et ipsa tenetur ullam ab nesciunt quas fugit velit impedit illum esse eligendi corporis culpa
-                praesentium aspernatur ex sint veniam quidem, doloribus corrupti hic vitae. Eum neque ducimus omnis
-                exercitationem?
-            </p>
+       <section id="input">
+           <label for="noun-1">noun</label>
+           <input type="text" id="noun-1">
+           <label for="noun-2">noun</label>
+           <input type="text" id="noun-2">
+           <label for="noun-3">noun</label>
+           <input type="text" id="noun-3">
+           <label for="adverb-1">adverb</label>
+           <input type="text" id="adverb-1">
+           <label for="verb-1">verb</label>
+           <input type="text" id="verb-1">
+            <label for="adjective-1">adjective</label>
+            <input type="text" id="adjective-1">
+            <label for="adjective-2">adjective</label>
+            <input type="text" id="adjective-2">
+            <label for="verb-2">verb</label>
+            <input type="text" id="verb-2">
+            
 
-        </section>
-    </main>
-    <footer>
-        <div class="copy gutter-right">&copy; 2020 Alchemy Code Lab</div>
-    </footer>
+
+
+       </section>
+   </main>
 
     <script type="module" src="./app.js"></script>
 </body>
