added js to html, hides parapragh when button clicked

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
    <main>
-       <p id="story">
+       <p id="story" class="hidden">
         Once upon a <span id="noun-1">_</span> there were three little pigs. One pig
         built a house of <span id="noun-2">_</span> while the second pig built his
         house with <span id="noun-3">_</span>. They built their houses very <span id="adverb-1">_</span>
@@ -28,25 +28,22 @@
 
        <section id="input">
            <label for="noun-1">noun</label>
-           <input type="text" id="noun-1">
+           <input type="text" id="noun1">
            <label for="noun-2">noun</label>
-           <input type="text" id="noun-2">
+           <input type="text" id="noun2">
            <label for="noun-3">noun</label>
-           <input type="text" id="noun-3">
+           <input type="text" id="noun3">
            <label for="adverb-1">adverb</label>
-           <input type="text" id="adverb-1">
+           <input type="text" id="adverb1">
            <label for="verb-1">verb</label>
-           <input type="text" id="verb-1">
+           <input type="text" id="verb1">
             <label for="adjective-1">adjective</label>
-            <input type="text" id="adjective-1">
+            <input type="text" id="adjective1">
             <label for="adjective-2">adjective</label>
-            <input type="text" id="adjective-2">
+            <input type="text" id="adjective2">
             <label for="verb-2">verb</label>
-            <input type="text" id="verb-2">
-            
-
-
-
+            <input type="text" id="verb2">
+            <button id="button">Submit</button>
        </section>
    </main>
 
