--- a/index.html
+++ b/index.html
@@ -9,9 +9,16 @@
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/home.css">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
+    <title>MadLib</title>
 </head>
-
+    <header>
+        <h1>
+            The Three Little Pigs
+        </h1>
+    </header>
 <body>
    <main>
        <p id="story" class="hidden">
@@ -26,7 +33,7 @@
         hid in their houses.
        </p>
 
-       <section id="input">
+       <section class="input">
            <label for="noun-1">noun</label>
            <input type="text" id="noun1">
            <label for="noun-2">noun</label>
@@ -43,6 +50,7 @@
             <input type="text" id="adjective2">
             <label for="verb-2">verb</label>
             <input type="text" id="verb2">
+            <br>
             <button id="button">Submit</button>
        </section>
    </main>
