added styling for header, paragraph, inputs and buttons

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <title>MadLib</title>
 </head>
     <header>
-        <h1>
+        <h1 class="text" id="header1">
             The Three Little Pigs
         </h1>
     </header>
 <body>
    <main>
-       <p id="story" class="hidden">
+       <p id="story" class="text hidden">
         Once upon a <span id="noun-1">_</span> there were three little pigs. One pig
         built a house of <span id="noun-2">_</span> while the second pig built his
         house with <span id="noun-3">_</span>. They built their houses very <span id="adverb-1">_</span>
@@ -33,7 +33,7 @@
         hid in their houses.
        </p>
 
-       <section class="input">
+       <section class="text input">
            <label for="noun-1">noun</label>
            <input type="text" id="noun1">
            <label for="noun-2">noun</label>
@@ -51,7 +51,7 @@
             <label for="verb-2">verb</label>
             <input type="text" id="verb2">
             <br>
-            <button id="button">Submit</button>
+            <button class="text"id="button">Submit</button>
        </section>
    </main>
 
